--- a/2022/June_Batch/7Nodejs/November/10-11-22/server-side-rendering/views/table.ejs
+++ b/2022/June_Batch/7Nodejs/November/10-11-22/server-side-rendering/views/table.ejs
@@ -16,6 +16,27 @@
     <div class="container">
         <div class="col-12 text-center">
              <h1><%=companyName%></h1>
+             <h2><%=name%></h2>
+        </div>
+        <div class="col-12">
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First Name</th>
+                    <th scope="col">Age</th>
+                  </tr>
+                </thead>
+                <tbody>
+                 <%list.forEach((item,index)=>{%>
+                  <tr>
+                    <th scope="row"><%=index%></th>
+                    <td><%=item.firstName%></td>
+                    <td><%=item.age%></td>
+                  </tr>
+                 <%})%> 
+                </tbody>
+              </table>
         </div>
     </div>
 </body>
