--- a/2022/June_Batch/7Nodejs/November/10-11-22/server-side-rendering/views/success.ejs
+++ b/2022/June_Batch/7Nodejs/November/10-11-22/server-side-rendering/views/success.ejs
@@ -15,19 +15,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <div class="container">
         <div class="col-12 text-center">
-            <form action="/uploadDetails" method="post">
-                <div class="form-group">
-                  <label>Email address</label>
-                  <input type="email" class="form-control" name="email">
-        
-                </div>
-                <div class="form-group">
-                  <label>Password</label>
-                  <input type="password" class="form-control" name="password">
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-              </form>
-        </div>
+            Successfully data is submitted
+        </div>  
     </div>
 </body>
 </html>
